# mq-crawl

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  deny.toml  justfile
.github/workflows/: release.yml
src/: crawler.rs  http_client.rs  lib.rs  main.rs
