[package]
authors = ["Takahiro Sato <harehare1110@gmail.com>"]
categories = ["command-line-utilities", "text-processing"]
description = "Web crawler for batch Markdown file processing"
edition = "2024"
homepage = "https://mqlang.org/"
keywords = ["markdown", "jq", "query", "crawler"]
license = "MIT"
name = "mq-crawler"
readme = "README.md"
repository = "https://github.com/raystyle/mq-crawl"
version = "0.5.26"

[dependencies]
chromiumoxide = {version = "0.9", default-features = false}
clap = {version = "4.6.1", features = ["derive"]}
crossbeam = "0.8.4"
dashmap = "6.1.0"
fantoccini = {version = "0.22.1", default-features = false, features = ["rustls-tls"]}
futures = "0.3"
miette = {version = "7.6.0", features = ["fancy"]}
mq-lang = "0.5.26"
mq-markdown = "0.5.26"
reqwest = {version = "0.13", features = ["json"]}
scraper = "0.26.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tempfile = "3.27"
tokio = {version = "1.51.0", features = ["full"]}
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.23", features = ["env-filter"]}
url = "2.5.8"

[dev-dependencies]
httpmock = "0.8.2"
rstest = "0.26.1"

[[bin]]
doc = false
name = "mq-crawl"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
